correct alignment for left image

--- a/style.css
+++ b/style.css
@@ -129,46 +129,41 @@ nav{
     width: 100%;
 }
 
-
 .container2{
     background-color: #C9ADA7;
     display: flex;
     height: 500px;
-    /* position: relative; */
 }
 
 .container-img {
     position: relative;
     width: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .container-img img{
-    /* margin-left: 15rem;
-    margin-top: 3rem; */
-    position: absolute;
-    top: 4rem;
-    left: 14rem;
+    display: block;
     width: 400px;
     height: 400px;
     z-index: 1;
 }
 
-.container2 .blob{
+.container-img .blob {
     position: absolute;
     z-index: 0;
-    top: 4rem;
-    left: 14rem;
+    transform: translate(10%, 0%);
     width: 450px;
     height: 350px;
-    background-image: url(images/blob1.png); 
+    background-image: url(images/blob1.png);
     background-size: cover;
 }
 
-.container2 .leaf3{
-    position:  absolute;
+.container-img .leaf3 {
+    position: absolute;
     z-index: 2;
-    top: 15rem;
-    left: 13rem;
+    transform: translate(-50%, 40%);
     width: 200px;
     height: 250px;
     background-image: url(images/leaf3.png);
@@ -180,11 +175,8 @@ nav{
     position: relative;
     display: grid;
     text-align: center;
-    /* max-width: 1000px; */
     padding: 1rem 1rem;
     /* background-color: #c1c8f0;  */
-    /* margin-left: 10rem; */
-    
 }
 
 .container2 .header-text h2{
